<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/button_first"
            android:text="@string/info_del_sorteo"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/button_second"
            android:text="@string/resetear_window"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_horizontal"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/button_third"
        android:text="@string/jugar_nuevamente"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_gravity="center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:spanCount="2"
        tools:listitem="@layout/item_window" />

</androidx.appcompat.widget.LinearLayoutCompat>